--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     color:black;
   }
 footer{
-    background-color: rgb(3, 192, 240);
+    background-color: rgb(66, 76, 78);
     font-size:30px;
     padding: 10px;
     text-align: center;
@@ -32,6 +32,7 @@ footer{
 .icon{
   height:50px;
   width:50px;
+  margin-right: 10px;
 }
 
 .text{
